@@ -28,6 +28,7 @@ Chadder, named after Twitter, is a social media-like app built with JavaFX. This
 * Open Project in Workspace
 * Once project is opened, in the External Libraries folder, all the JavaFX jars and the RichTextFX jar should appear
 * Run AppDemo file
+* If the "JavaFX runtime components are missing, and are required to run this application" error appears in console when trying to run, navigate to the .vscode folder, then the launch.json file. Open it, and add the following command directly under the "projectName" line. "vmArgs": "--module-path \"lib/javafx-sdk-19/lib\" --add-modules javafx.controls,javafx.fxml". Finally, save the launch.json file and rerun AppDemo
 
 ## Data Structures
 
